# CPP_3DViewer_v.2.0

./: README.md
src/: CMakeLists.txt  Doxyfile  Makefile  dvi.html  main.cc
src/controller/: controller_object.cc  controller_object.h
src/model/: affine.cc  affine.h  model.cc  model.h  parser.cc  parser.h
src/tests/: CMakeLists.txt  test_affine.cc  test_main.cc  test_parcer.cc  tests.h
src/tests/obj_test_file/: test_parcer.txt  test_parcer_2.txt  test_parcer_3.txt  test_parcer_4.txt
src/view/: glwidget.cc  glwidget.h  mainwindow.cc  mainwindow.h  mainwindow.ui  recorder.cc  recorder.h  settings.cc  settings.h
